# construction-safety-monitor

./: README.md  app.py  pyproject.toml
docs/: dataset.md  safety_protocols.md
notebooks/: Construction_Safety_Model_Development.ipynb
src/: process_logic.py  safety_logic.py
