[project]
name = "construction-safety-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.56.0",
    "ultralytics>=8.4.33",
]
